<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="sip"
            type="com.example.myapplication.ui.compounding.CompoundingViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.compounding.sip">
        <TextView
            android:id="@+id/sipCalculator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/power_of_compounding"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"   />


        <TextView
            android:id="@+id/initialAmountLabel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/initial_amount"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/sipCalculator"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/initialAmount"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/initial_amount"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:text="@={``+sip.compounding.initialAmount}"
            android:textAlignment="gravity"
            app:layout_constraintLeft_toRightOf="@id/initialAmountLabel"
            app:layout_constraintTop_toBottomOf="@id/sipCalculator" />


        <TextView
            android:id="@+id/sipAmountLabel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/monthly_investments"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/initialAmount"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/sipAmount"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/monthly_investments"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:text="@={``+sip.compounding.monthlyAmount}"
            android:textAlignment="gravity"
            app:layout_constraintLeft_toRightOf="@id/sipAmountLabel"
            app:layout_constraintTop_toBottomOf="@id/initialAmount" />

        <TextView
            android:id="@+id/rateOfInterestLabel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/rate_of_interest"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/sipAmount"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/rateOfInterest"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/rate_of_interest"
            android:inputType="number"
            android:minHeight="48dp"
            android:text="@={``+sip.compounding.rateOfInterest}"
            app:layout_constraintLeft_toRightOf="@id/rateOfInterestLabel"
            app:layout_constraintTop_toBottomOf="@id/sipAmount" />

        <TextView
            android:id="@+id/tenureLabel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/years"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/rateOfInterest"
            app:layout_constraintLeft_toLeftOf="parent"/>


        <EditText
            android:id="@+id/tenureYears"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/months"
            android:inputType="number"
            android:minHeight="48dp"
            android:text="@={``+sip.compounding.months}"
            app:layout_constraintLeft_toRightOf="@id/tenureLabel"
            app:layout_constraintTop_toBottomOf="@id/rateOfInterest" />

        <Button
            android:id="@+id/calculateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Calculate"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tenureLabel" />


        <TextView
            android:id="@+id/emimessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/compounded_amount"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calculateButton" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@={``+sip.compounding.compoundedAmount}"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textColor="#1FBFBE"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/calculateButton"
            app:layout_constraintLeft_toRightOf="@id/emimessage"

            >
        </TextView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>