<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
       <variable
           name="emi"
           type="com.example.myapplication.ui.emi.EmiViewModel"
           />
        <import type="com.example.myapplication.ui.utils.Converter"/>



    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F1FDFF"
    android:layout_margin="10dp"
    android:padding="10dp"
    tools:context=".ui.emi.EmiFragment">


    <TextView
        android:id="@+id/emiCalculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emi_calculator"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
app:layout_constraintTop_toTopOf="parent"        />

    <TextView
        android:id="@+id/principalAmountLabel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/principal_amount"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/emiCalculator"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/principalAmount"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Loan Amount"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:text="@={Converter.doubleToString(emi.emi.loanAmount)}"
        android:textAlignment="gravity"
        app:layout_constraintLeft_toRightOf="@id/principalAmountLabel"
        app:layout_constraintTop_toBottomOf="@id/emiCalculator" />

    <TextView
        android:id="@+id/rateOfInterestLabel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/rate_of_interest"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/principalAmount"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/rateOfInterest"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/rate_of_interest"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:gravity="left"
        android:text="@={Converter.doubleToString(emi.emi.loanRateOfInterest)}"
        app:layout_constraintLeft_toRightOf="@id/rateOfInterestLabel"
        app:layout_constraintTop_toBottomOf="@id/principalAmount" />

    <TextView
        android:id="@+id/tenureLabel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/tenure"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/rateOfInterest"
        app:layout_constraintLeft_toLeftOf="parent"/>


    <EditText
        android:id="@+id/tenuremonth"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/months"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@={Converter.longToString(emi.emi.tenureMonths)}"
        app:layout_constraintLeft_toRightOf="@id/tenureLabel"
        app:layout_constraintTop_toBottomOf="@id/rateOfInterest" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Calculate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tenureLabel" />


    <TextView
        android:id="@+id/emimessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/monthly_emi"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="@{emi.emi.emiAmount>0? 0 :  -1}"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculateButton" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@={Converter.longToString(emi.emi.emiAmount)}"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:textColor="#1FBFBE"
        android:textStyle="bold"
        android:visibility="@{emi.emi.emiAmount>0? 0 :  -1}"
        app:layout_constraintTop_toBottomOf="@id/calculateButton"
        app:layout_constraintLeft_toRightOf="@id/emimessage"

        >
    </TextView>
    <TextView
        android:id="@+id/totalPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Total Payment"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="@{emi.emi.emiAmount>0? 0 :  -1}"
        app:layout_constraintTop_toBottomOf="@id/emimessage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@={Converter.longToString(emi.emi.totalAmount)}"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:textColor="#1FBFBE"
        android:textStyle="bold"
        android:visibility="@{emi.emi.emiAmount>0? 0 :  -1}"
        app:layout_constraintTop_toBottomOf="@id/emimessage"
        app:layout_constraintLeft_toRightOf="@id/totalPayment"

        >
    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>
    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:visibility="@{emi.emi.emiAmount>0? 0 :  -1}"
        app:layout_constraintTop_toBottomOf="@id/emimessage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

    </com.github.mikephil.charting.charts.PieChart>

    </LinearLayout>
</layout>