<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="retirement"
            type="com.example.myapplication.ui.retirement.RetirementViewModel" />
        <import type="com.example.myapplication.ui.utils.Converter"/>



    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="#F1FDFF"
        tools:context=".retirement">

        <TextView
            android:id="@+id/retirementCalculator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retirement_calculator"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"        />

        <TextView
            android:id="@+id/ageNowLabel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/age_now"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/retirementCalculator"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/ageNow"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Age Now"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:text="@={Converter.longToString(retirement.retire.ageNow)}"
            android:textAlignment="gravity"
            app:layout_constraintLeft_toRightOf="@id/ageNowLabel"
            app:layout_constraintTop_toBottomOf="@id/retirementCalculator" />


        <TextView
            android:id="@+id/retirementAgeLabel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Retirement Age"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/ageNow"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/retirementAge"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="In years"
            android:inputType="number"
            android:minHeight="48dp"
            android:text="@={Converter.longToString(retirement.retire.retirementAge)}"
            android:textAlignment="gravity"
            app:layout_constraintLeft_toRightOf="@id/retirementAgeLabel"
            app:layout_constraintTop_toBottomOf="@id/ageNow" />

        <TextView
            android:id="@+id/lifeExpectancyLabel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/life_expectancy"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/retirementAge"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/lifeExpectancy"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/years"
            android:inputType="number"
            android:minHeight="48dp"
            android:text="@={Converter.longToString(retirement.retire.lifeExpectancy)}"
            app:layout_constraintLeft_toRightOf="@id/lifeExpectancyLabel"
            app:layout_constraintTop_toBottomOf="@id/retirementAge" />

        <TextView
            android:id="@+id/currentCorpusLabel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Current Corpus"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/lifeExpectancyLabel"
            app:layout_constraintLeft_toLeftOf="parent"/>


        <EditText
            android:id="@+id/currentCorpus"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Current Corpus"
            android:inputType="number"
            android:minHeight="48dp"
            android:text="@={Converter.longToString(retirement.retire.currentCorpus)}"
            app:layout_constraintLeft_toRightOf="@id/currentCorpusLabel"
            app:layout_constraintTop_toBottomOf="@id/lifeExpectancyLabel" />

        <TextView
            android:id="@+id/expenseLabel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Current Expense"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/currentCorpusLabel"
            app:layout_constraintLeft_toLeftOf="parent"/>


        <EditText
            android:id="@+id/expense"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Current Expense"
            android:inputType="number"
            android:minHeight="48dp"
            android:text="@={Converter.longToString(retirement.retire.currentExpense)}"
            app:layout_constraintLeft_toRightOf="@id/expenseLabel"
            app:layout_constraintTop_toBottomOf="@id/currentCorpusLabel" />

        <TextView
            android:id="@+id/expectedReturnLabel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Expected Return"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/expenseLabel"
            app:layout_constraintLeft_toLeftOf="parent"/>


        <EditText
            android:id="@+id/expectedReturn"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Expected Return"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:text="@={Converter.doubleToString(retirement.retire.expectedReturn)}"
            app:layout_constraintLeft_toRightOf="@id/expectedReturnLabel"
            app:layout_constraintTop_toBottomOf="@id/expenseLabel" />

        <Button
            android:id="@+id/calculateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Calculate"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expectedReturn" />


        <TextView
            android:id="@+id/emimessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/monthly_contribution"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calculateButton" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@={``+retirement.retire.sipMonth}"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textColor="#1FBFBE"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/calculateButton"
            app:layout_constraintLeft_toRightOf="@id/emimessage"

            >
        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>